[package]
name = "bitmac"
version = "0.1.0"
authors = ["LazyMechanic <asharnrus@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Bitmap structure"
repository = "https://github.com/LazyMechanic/bitmac"
documentation = "https://docs.rs/bitmac"
readme = "README.md"
categories = ["data-structures"]
keywords = ["bitmap", "bit", "flags", "bitflags"]
rust-version = "1.56.0"

[dependencies]
thiserror = "1.0"