[package]
name = "bitmac"
version = "0.2.0"
authors = ["LazyMechanic <asharnrus@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Structure for accessing to single bits"
repository = "https://github.com/LazyMechanic/bitmac"
documentation = "https://docs.rs/bitmac"
readme = "README.md"
categories = ["data-structures"]
keywords = ["bitmap", "bit", "flags", "bitflags"]
rust-version = "1.56.0"

[dependencies]
bytes = { version = "1.2.1", optional = true }
smallvec = { version = "1.9", optional = true }

[features]
default = []

bytes = ["dep:bytes"]
smallvec = ["dep:smallvec"]